add data in location and use, not redux

--- a/dev-ops/Jenkinsfile
+++ b/dev-ops/Jenkinsfile
@@ -1,7 +1,7 @@
 _BUILD_NUMBER = env.BUILD_NUMBER
 _BRANCH_NAME = env.BRANCH_NAME
 
-TIMEZONE = "GMT+7"
+TIMEZONE = "GMT"
 APP_BOOT_TIME_SECOND = 5
 SLACK_CHANNEL_NAME = "GMQ6JQ1FT"
 
